syntax = "proto3";
package greet;

option go_package = "github.com/devj1003/grpc-go-course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);                       // unary
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);       // server streaming
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);            // client streaming
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse); // bi-directional streaming
}